# allab-ki23

./: lab1.cpp  lefthook.yml  readme.md
lab2/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  data.txt  data_out.txt  income.cpp  income.h  incomelist.cpp  incomelist.h  incops.cpp  incops.h  introwindow.cpp  introwindow.h  introwindow.ui  lab2theories.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab3/: CMakeLists.txt  INPUT.TXT  ai1096.cpp  aitests1096.cpp
